# hydra-xeye

./: README.md  config_environment.sh
xcore/: README.md
xcore/basic_devkit/: README.md
xcore/basic_devkit/host/: CMakeLists.txt  ci.yml  config.json  connector_message_thread.cpp  connector_message_thread.h  debug_def.h  dl_input_thread.cpp  dl_input_thread.h  dl_output_thread.cpp  dl_output_thread.h  dl_process.cpp  dl_process.h  dl_queue.h  file_map.cpp  file_map.h  fp16_convert.c  fp16_convert.h  mv_types.h  usb_connector.cpp  usb_connector.h  xeye.cpp  xeye.h  xeye_computation.cpp  xeye_computation.h  xeye_computation_interface.cpp  xeye_computation_interface.h  xeye_config.cpp  xeye_config.h  xeye_data_type.h  xeye_interface.cpp  xeye_interface.h  xeye_message_data_type.h  xeye_usb.cpp  xeye_usb.h  xeye_util.cpp  xeye_util.h
xcore/basic_devkit/host/cmake/: FindJPEGTURBO.cmake  Findlibusb1.0.cmake
xcore/basic_devkit/host/tests/: CMakeLists.txt  body_detector_handler.cpp  body_detector_handler.h  computation_mode_test.sh  image_handler.cpp  image_handler.h  nms.h  ssd_output_handler.cpp  ssd_output_handler.h  standard_mode_test.sh  style_transfer_handler.cpp  style_transfer_handler.h  test_body_detector.cpp  test_cjson.cpp  test_no_preprocess.cpp  test_style_transfer.cpp  test_xeye_computation_sdk.cpp  test_xeye_sdk.cpp  watchdog_handler.cpp  watchdog_handler.h
xcore/basic_devkit/host/tests/data/: computation_mode_config.json  config.json  no-preprocess-config.json  standard_mode_config.json  style_transfer.json  test.yuv
xcore/basic_devkit/starter/: Makefile  kcnf  newMakefile.mk
xcore/basic_devkit/starter/config/: custom.ldscript
xcore/basic_devkit/starter/leon/: FathomMsgInterface.h  PlgNetwork.cpp  PlgNetwork.h  app_guzzi_command.h  app_guzzi_command_dbg.c  app_guzzi_command_dbg.h  app_guzzi_command_spi.c  app_guzzi_spi_commands.h  boardconfig.c  boardconfig.h  cJSON.c  camera_control.c  camera_control.h  dtp_database.S  frmdispatch.cpp  frmdispatch.h  gzz_main.c  ic_main.c  ic_main.h  main.cpp  rtems_config.c  subdir.mk  xeye_config.cpp  xeye_config.h  xeye_data_type.h
xcore/basic_devkit/starter/leon_rt/: main_rt.cpp  rtems_config.c  subdir.mk
xcore/basic_devkit/starter/lib/: sunny_usb_api.h
xcore/basic_devkit/starter/mvbuild/: clean-list  kcnf
xcore/basic_devkit/starter/patches/: README.md
xcore/basic_devkit/starter/patches/USB_VSC/: kcnf  subdir.mk
xcore/basic_devkit/starter/patches/plgXlink/: subdir.mk
xcore/crowd_app/: Makefile  README.md
xcore/crowd_app/config/: conf_apps.json  custom.ldscript
xcore/crowd_app/leon/: cmdlist.cpp  cmdlist.h  config.c  config.h  deep.cpp  deep.h  define.h  fathomRun.cpp  fathomRun.h  fathom_init.cpp  fathom_init.h  init.c  main.cpp  model.h  net_app.h  ntp_client.cpp  ntp_client.h  rtems_config.h  sntp_client.c  telnet.cpp  telnet.h  videodemo.h  videodemo_appinit.c  videodemo_create.c  videodemo_device.h  videodemo_device_urc.c  videodemo_init.c  videodemo_outswitch.c
xcore/crowd_app/leon/http/: heartbeat_manager.hpp  http.hpp  online_update_manager.hpp  tracking_data_manager.hpp
xcore/crowd_app/leon/params/: params.cpp  params.hpp
xcore/crowd_app/leon/spiflash/: spiflash.hpp
xcore/crowd_app/leon/utils/: json_utils.hpp  timer.hpp  utils.cpp  utils.hpp
xcore/crowd_app/leon/watchdog/: watchdog.hpp
xcore/crowd_app/leon_rt/: Cam214SIPPDebayerHdmi.c  Cam214SIPPDebayerHdmi.h  ISPParamsPP.c  ISPParamsStill.c  ISPPipeSettings.h  appMemMap.S  backproc.cpp  backproc.h  datatype.h  deep.cpp  deep.h  define.h  img2msg.cpp  img2msg.h  main.cpp  run.c  run_tracker.cpp  run_tracker.h  sippRGB.c  sippRGB.h  sippRGB.sipp
xcore/crowd_app/leon_rt/matching/: linear_assignment.cpp  linear_assignment.h  model.cpp  model.h  track.cpp  track.h  tracker.cpp  tracker.h
xcore/crowd_app/leon_rt/thirdPart/: hungarianoper.cpp  hungarianoper.h
xcore/crowd_app/leon_rt/thirdPart/munkres/: matrix.h  munkres.cpp  munkres.h
xcore/crowd_app/leon_rt/utils/: Bicubic.cpp  eigen_test.cpp  jpeg_encoder.c  jpeg_encoder.h  jpeg_utils.hpp  matrix_test.cpp  md5.cpp  md5.h  munkres_test.cpp  test.h  test_tracker.cpp
xcore/crowd_app/models/: detect-v1.12
xcore/crowd_app/scripts/: base64.sh  release.sh
xcore/crowd_app/shared/: cam_config.h  debug.h  facemsg.h  facepub.h  graph.hpp  pubdef.h  resourceshare.h  ringbuf.hpp
xcore/platform/: README.md  mkcompile_h.sh  platform.mk
xcore/platform/config/: people_count_cfg.mk  starter_cfg.mk
xcore/platform/leonOS/leon/common/: los_plat_common.cpp  los_plat_common.h
xcore/platform/leonOS/leon/led/: xeye_led.c  xeye_led.h
xcore/platform/leonOS/leon/los_sys_init/: los_sys_config.c  los_sys_config.h
xcore/platform/leonOS/leon/spiflash/: spi_i2c_config.c  spi_i2c_config.h  spiflash.c  spiflash.h
xcore/platform/module/plog/: Init.h  Log.h  Logger.h  Record.h  Util.h
xcore/platform/module/sipp/: sipp_build.mk  sipp_setting.mk
xos/: README.md
xos/mdk/: release.info
xos/tools/: release.info
(+111 files in other folders)
